--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,9 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   uuid: ^4.1.0
   fluttertoast: ^8.0.9
-  firebase_auth: ^4.10.1
-  firebase_core: ^2.17.0
-  firebase_storage: ^11.2.8
-  cloud_firestore: ^4.9.3
+  http: ^1.1.0
+  flutter_secure_storage: ^5.0.2
+  intl: ^0.19.0
 
 
 dev_dependencies:
@@ -73,12 +72,12 @@ flutter:
 
   #To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+    - assets/images/
 
   fonts:
-      - family: Signatra
-        fonts:
-          - asset: assets/fonts/Signatra.ttf
+    - family: Signatra
+      fonts:
+        - asset: assets/fonts/Signatra.ttf
 
 
 
